--- a/index.html
+++ b/index.html
@@ -1451,6 +1451,10 @@
 
 
 
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1029/2018JA026354" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 </p>
 
