Added pdfs to publications

--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.sciencedirect.com/science/article/pii/S0094576520307190" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/2101.07722.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -1138,7 +1138,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://www.sciencedirect.com/science/article/pii/S0094576520307189" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/2101.10691.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -1221,7 +1221,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1016%2Fj.asr.2019.11.020" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/1911.07550.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -1305,7 +1305,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/10.1016%2Fj.asr.2019.11.023" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/1911.07586.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -1429,8 +1429,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/1905.09600.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
