--- a/publication/de-simone-2011/index.html
+++ b/publication/de-simone-2011/index.html
@@ -791,8 +791,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="http://www.astrophys-space-sci-trans.net/7/425/2011/astra-7-425-2011.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
