--- a/publication/gieseler-2017/index.html
+++ b/publication/gieseler-2017/index.html
@@ -727,8 +727,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1002/2017JA024763" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
