--- a/publication/heber-2008/index.html
+++ b/publication/heber-2008/index.html
@@ -733,8 +733,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://iopscience.iop.org/article/10.1086/592596/pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -755,7 +761,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/2008ApJ...689.1443H" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.1086/592596" target="_blank" rel="noopener">
   DOI
 </a>
 
