--- a/publication/heber-2009/index.html
+++ b/publication/heber-2009/index.html
@@ -732,8 +732,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://iopscience.iop.org/article/10.1088/0004-637X/699/2/1956/pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
