--- a/publication/heber-2015/index.html
+++ b/publication/heber-2015/index.html
@@ -735,8 +735,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://iopscience.iop.org/article/10.1088/1742-6596/632/1/012057/pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
