--- a/publication/mughal-2021/index.html
+++ b/publication/mughal-2021/index.html
@@ -749,7 +749,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://www.sciencedirect.com/science/article/pii/S0094576520307190" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/pdf/2101.07722.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
