--- a/publication/praks-2021/index.html
+++ b/publication/praks-2021/index.html
@@ -756,7 +756,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://www.sciencedirect.com/science/article/pii/S0094576520307189" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/pdf/2101.10691.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
