--- a/publication/gieseler-2020/index.html
+++ b/publication/gieseler-2020/index.html
@@ -744,7 +744,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.1016%2Fj.asr.2019.11.023" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/pdf/1911.07586.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
