--- a/publication/oleynik-2020/index.html
+++ b/publication/oleynik-2020/index.html
@@ -743,7 +743,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.1016%2Fj.asr.2019.11.020" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/pdf/1911.07550.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
