--- a/publication/palmroth-2019/index.html
+++ b/publication/palmroth-2019/index.html
@@ -784,8 +784,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/pdf/1905.09600.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
