--- a/publication/index.html
+++ b/publication/index.html
@@ -2270,7 +2270,7 @@
       P. Dunzlaff</span>, <span >
       H. Fichtner</span>, <span >
       J. Gieseler</span>, <span >
-      R. Gomez-Herrero</span>, <span >
+      R. Gómez-Herrero</span>, <span >
       B. Heber</span>, <span >
       A. Klassen</span>, <span >
       J. Kleimann</span>, <span >
@@ -2931,7 +2931,7 @@
       B. Heber</span>, <span >
       J. Gieseler</span>, <span >
       P. Dunzlaef</span>, <span >
-      R. Gomez-Herrero</span>, <span >
+      R. Gómez-Herrero</span>, <span >
       A. Klassen</span>, <span >
       R. Müller-Mellin</span>, <span >
       R.A. Mewaldt</span>, <span >
@@ -3084,9 +3084,9 @@
       J. Gieseler</span>, <span >
       B. Heber</span>, <span >
       P. Dunzlaff</span>, <span >
-      R. Mu Ller-Mellin</span>, <span >
+      R. Müller-Mellin</span>, <span >
       A. Klassen</span>, <span >
-      R. Gomez-Herrero</span>, <span >
+      R. Gómez-Herrero</span>, <span >
       H. Kunow</span>, <span >
       R. Wimmer-Schweingruber</span>, <span >
       R.A. Mewaldt</span>
