Updated About me

--- a/project/index.html
+++ b/project/index.html
@@ -678,7 +678,7 @@
       <h2><a href="/project/radmon/" >Aalto-1/RADMON data set 2017/2018</a></h2>
       <div class="article-style">
         
-          Public data set of RADMON energetic particle measurements onboard CubeSat Aalto-1
+          Public data set of RADiation MONitor (RADMON) measurements onboard the 1st Finnish CubeSat Aalto-1
         
       </div>
     </div>
