--- a/project/radmon/index.html
+++ b/project/radmon/index.html
@@ -33,7 +33,7 @@
   
     
   
-  <meta name="description" content="Public data set of RADMON energetic particle measurements onboard CubeSat Aalto-1" />
+  <meta name="description" content="Public data set of RADiation MONitor (RADMON) measurements onboard the 1st Finnish CubeSat Aalto-1" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://jgieseler.github.io/project/radmon/" />
@@ -296,7 +296,7 @@
   <meta property="og:site_name" content="Jan Gieseler" />
   <meta property="og:url" content="https://jgieseler.github.io/project/radmon/" />
   <meta property="og:title" content="Aalto-1/RADMON data set 2017/2018 | Jan Gieseler" />
-  <meta property="og:description" content="Public data set of RADMON energetic particle measurements onboard CubeSat Aalto-1" /><meta property="og:image" content="https://jgieseler.github.io/project/radmon/featured.png" />
+  <meta property="og:description" content="Public data set of RADiation MONitor (RADMON) measurements onboard the 1st Finnish CubeSat Aalto-1" /><meta property="og:image" content="https://jgieseler.github.io/project/radmon/featured.png" />
     <meta property="twitter:image" content="https://jgieseler.github.io/project/radmon/featured.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -351,7 +351,7 @@
       "url": "https://jgieseler.github.io/media/icon_hu5c7488c98d09cd66fe6d6ab013abf92d_36098_192x192_fill_lanczos_center_2.png"
     }
   },
-  "description": "Public data set of RADMON energetic particle measurements onboard CubeSat Aalto-1"
+  "description": "Public data set of RADiation MONitor (RADMON) measurements onboard the 1st Finnish CubeSat Aalto-1"
 }
 </script>
 
@@ -819,7 +819,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>You can find the public data set of RADMON measurements of energetic particles (electrons and protons) onboard CubeSat Aalto-1 in Low Eart Orbit (LEO) in 2017-2018 <a href="https://zenodo.org/record/3541628" target="_blank" rel="noopener">here at Zenodo</a>.</p>
+      <p>You can find the public data set of RADiation MONitor (RADMON) measurements of energetic charged particles (electrons and protons) onboard the 1st Finnish CubeSat Aalto-1 in Low Eart Orbit (LEO) in 2017-2018 <a href="https://zenodo.org/record/3541628" target="_blank" rel="noopener">here at Zenodo</a>.</p>
 
     </div>
 
