--- a/index.html
+++ b/index.html
@@ -2092,7 +2092,7 @@
       
       <li>
         <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>
-        <span id="person-address">Vesilinnantie 5<br>20014 Turku</span>
+        <span id="person-address">Vesilinnantie 5, 20500 Turku, Finland</span>
       </li>
     
 
@@ -2117,7 +2117,7 @@
     <input id="map-provider" value="mapnik">
     <input id="map-lat" value="60.455079">
     <input id="map-lng" value="22.286011">
-    <input id="map-dir" value="Vesilinnantie 520014 Turku">
+    <input id="map-dir" value="Vesilinnantie 5, 20500 Turku, Finland">
     <input id="map-zoom" value="16">
     <input id="map-api-key" value="">
   </div>
