--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -856,7 +856,7 @@
           <div class="col-12 col-md-9">Wowchemy HQ</div>
           
             <div class="col-md-3"></div>
-            <div class="col-12 col-md-9">450 Serra Mall<br>94305 Stanford</div>
+            <div class="col-12 col-md-9">450 Serra Mall, 94305 Stanford, United States</div>
           
         </div>
       </div>
