--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">PhD in Heliospheric Physics, 2018</p>
+              <p class="course">Dr. rer. nat. (PhD) in Heliospheric Physics, 2018</p>
               <p class="institution">University of Kiel, Germany</p>
             </div>
           </li>
