--- a/publication/praks-2021/index.html
+++ b/publication/praks-2021/index.html
@@ -813,7 +813,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/https://doi.org/10.1016/j.actaastro.2020.11.042" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.1016/j.actaastro.2020.11.042" target="_blank" rel="noopener">
   DOI
 </a>
 
