--- a/publication/kuehl-2013/index.html
+++ b/publication/kuehl-2013/index.html
@@ -723,7 +723,7 @@
       A. Kopp</span>, <span >
       M. Potgieter</span>, <span >
       K. Scherer</span>, <span >
-      R.~D. Strauss</span>
+      R. D. Strauss</span>
   </div>
   
   
