add mastodon link to header for verification

--- a/404.html
+++ b/404.html
@@ -298,10 +298,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>404 Page not found | Jan Gieseler</title>
