--- a/project/forcefield/index.html
+++ b/project/forcefield/index.html
@@ -350,10 +350,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Solar modulation potential based on proton proxies | Jan Gieseler</title>
