--- a/project/radmon/index.html
+++ b/project/radmon/index.html
@@ -350,10 +350,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Aalto-1/RADMON data set 2017/2018 | Jan Gieseler</title>
