--- a/publication/de-simone-2011/index.html
+++ b/publication/de-simone-2011/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Latitudinal and radial gradients of galactic cosmic ray protons in the inner heliosphere - PAMELA and Ulysses observations | Jan Gieseler</title>
