--- a/publication/gieseler-2007/index.html
+++ b/publication/gieseler-2007/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>The radial gradient of galactic cosmic rays: Ulysses KET and ACE CRIS Measurements | Jan Gieseler</title>
