--- a/publication/gieseler-2013/index.html
+++ b/publication/gieseler-2013/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Inner heliosphere spatial gradients of GCR protons in the low GeV range | Jan Gieseler</title>
