--- a/publication/gieseler-2017/index.html
+++ b/publication/gieseler-2017/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>An Empirical Modification of the Force Field Approach to Describe the Modulation of Galactic Cosmic Rays Close to Earth in a Broad Range of Rigidities | Jan Gieseler</title>
