--- a/publication/gieseler-2020/index.html
+++ b/publication/gieseler-2020/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Radiation monitor RADMON aboard Aalto-1 CubeSat: First results | Jan Gieseler</title>
