--- a/publication/heber-2008/index.html
+++ b/publication/heber-2008/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Latitudinal gradients of galactic cosmic rays during the 2007 solar minimum | Jan Gieseler</title>
