--- a/publication/heber-2009/index.html
+++ b/publication/heber-2009/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Modulation of galactic cosmic ray protons and electrons during an unusual solar minimum | Jan Gieseler</title>
