--- a/publication/heber-2015/index.html
+++ b/publication/heber-2015/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Mini neutron monitor measurements at the Neumayer III station and on the German research vessel Polarstern | Jan Gieseler</title>
