--- a/publication/kouloumvakos-2022a/index.html
+++ b/publication/kouloumvakos-2022a/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>PyThea: An open-source software package to perform 3D reconstruction of coronal mass ejections and shock waves | Jan Gieseler</title>
