--- a/publication/kouloumvakos-2022b/index.html
+++ b/publication/kouloumvakos-2022b/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>The effect of shock wave properties on the release timings of solar energetic particles | Jan Gieseler</title>
