--- a/publication/kuehl-2013/index.html
+++ b/publication/kuehl-2013/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Simultaneous Analysis of Recurrent Jovian Electron Increases and Galactic Cosmic Ray Decreases | Jan Gieseler</title>
