--- a/publication/mughal-2021/index.html
+++ b/publication/mughal-2021/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Aalto-1, multi-payload CubeSat: In-orbit results and lessons learned | Jan Gieseler</title>
