--- a/publication/oleynik-2020/index.html
+++ b/publication/oleynik-2020/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Calibration of RADMON radiation monitor onboard Aalto-1 CubeSat | Jan Gieseler</title>
