--- a/publication/palmroth-2019/index.html
+++ b/publication/palmroth-2019/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>FORESAIL-1 CubeSat Mission to Measure Radiation Belt Losses and Demonstrate Deorbiting | Jan Gieseler</title>
