--- a/publication/papaioannou-2022/index.html
+++ b/publication/papaioannou-2022/index.html
@@ -347,10 +347,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>The first ground-level enhancement of solar cycle 25 on 28 October 2021 | Jan Gieseler</title>
