--- a/project/foresail/index.html
+++ b/project/foresail/index.html
@@ -350,10 +350,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>FORESAIL | Jan Gieseler</title>
