--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -302,10 +302,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Publication_types | Jan Gieseler</title>
