--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -354,10 +354,7 @@
 
   
 
-  
-
-
-
+  <link rel="me" href="https://fediscience.org/@JanGieseler" />
 
 
   <title>Example Talk | Jan Gieseler</title>
