--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -914,7 +914,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://jgieseler.github.io">Jan Gieseler</a></h5>
-      <h6 class="card-subtitle">Postdoctoral Researcher</h6>
+      <h6 class="card-subtitle">Senior Researcher</h6>
       
       <ul class="network-icon" aria-hidden="true">
   
