fix typo in jebaray and dresing 2023

--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@
       A. Kouloumvakos</span>, <span >
       N. Dresing</span>, <span >
       A. Warmuth</span>, <span >
-      N. Wijsen&#34;</span>, <span >
+      N. Wijsen</span>, <span >
       C. Palmroos</span>, <span >
       J. Gieseler</span>, <span >
       A. Marmyleva</span>, <span >
@@ -1463,7 +1463,7 @@
       R. Vainio</span>, <span >
       A. Vecchio</span>, <span >
       A. M. Veronig</span>, <span >
-      N. Wijsen&#34;</span>
+      N. Wijsen</span>
   </div>
   
   
