--- a/publication/apr17/index.html
+++ b/publication/apr17/index.html
@@ -747,7 +747,7 @@
       R. Vainio</span>, <span >
       A. Vecchio</span>, <span >
       A. M. Veronig</span>, <span >
-      N. Wijsen&#34;</span>
+      N. Wijsen</span>
   </div>
   
   
