--- a/publication/jebaraj-2023/index.html
+++ b/publication/jebaraj-2023/index.html
@@ -704,7 +704,7 @@
       A. Kouloumvakos</span>, <span >
       N. Dresing</span>, <span >
       A. Warmuth</span>, <span >
-      N. Wijsen&#34;</span>, <span >
+      N. Wijsen</span>, <span >
       C. Palmroos</span>, <span >
       J. Gieseler</span>, <span >
       A. Marmyleva</span>, <span >
