--- a/publication/index.html
+++ b/publication/index.html
@@ -841,7 +841,7 @@
       A. Kouloumvakos</span>, <span >
       N. Dresing</span>, <span >
       A. Warmuth</span>, <span >
-      N. Wijsen&#34;</span>, <span >
+      N. Wijsen</span>, <span >
       C. Palmroos</span>, <span >
       J. Gieseler</span>, <span >
       A. Marmyleva</span>, <span >
@@ -1244,7 +1244,7 @@
       R. Vainio</span>, <span >
       A. Vecchio</span>, <span >
       A. M. Veronig</span>, <span >
-      N. Wijsen&#34;</span>
+      N. Wijsen</span>
   </div>
   
   
