--- a/project/forcefield/index.html
+++ b/project/forcefield/index.html
@@ -811,6 +811,7 @@
 <hr>
 <ul>
 <li><a href="https://www.ieap.uni-kiel.de/et/ag-heber/cosmicrays/ds01.txt" target="_blank" rel="noopener"><strong>DOWNLOAD DATA</strong></a></li>
+<li><a href="https://doi.org/10.5281/zenodo.1480508" target="_blank" rel="noopener"><strong>Zenodo mirror</strong></a></li>
 </ul>
 
     </div>
