update Solar-MACH project

--- a/index.html
+++ b/index.html
@@ -2207,7 +2207,23 @@
   
   <a class="btn btn-outline-primary btn-page-header" href="https://github.com/jgieseler/Solar-MACH" target="_blank" rel="noopener">
     <i class="fab fa-github mr-1"></i>
-    GitHub Repository
+    Web-app repository
+  </a>
+
+  
+  
+  
+    
+  
+  
+  
+  
+  
+    
+  
+  <a class="btn btn-outline-primary btn-page-header" href="https://github.com/jgieseler/Solar-MACH" target="_blank" rel="noopener">
+    <i class="fab fa-github mr-1"></i>
+    Python package repository
   </a>
 
 
