--- a/project/solar-mach/index.html
+++ b/project/solar-mach/index.html
@@ -787,7 +787,23 @@
   
   <a class="btn btn-outline-primary btn-page-header" href="https://github.com/jgieseler/Solar-MACH" target="_blank" rel="noopener">
     <i class="fab fa-github mr-1"></i>
-    GitHub Repository
+    Web-app repository
+  </a>
+
+  
+  
+  
+    
+  
+  
+  
+  
+  
+    
+  
+  <a class="btn btn-outline-primary btn-page-header" href="https://github.com/jgieseler/Solar-MACH" target="_blank" rel="noopener">
+    <i class="fab fa-github mr-1"></i>
+    Python package repository
   </a>
 
 
@@ -809,9 +825,10 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>The <a href="https://solar-mach.github.io" target="_blank" rel="noopener"><em>Solar MAgnetic Connection Haus</em> (Solar-MACH) tool</a> is a multi-spacecraft longitudinal configuration plotter. It was originally developed at the University of Kiel, Germany, and further discussed within the <a href="https://www.cosmos.esa.int/web/esdc/archives-user-groups/heliophysics" target="_blank" rel="noopener">ESA Heliophysics Archives USer (HAUS)</a> group. It is now opened to everyone (<a href="https://github.com/esdc-esac-esa-int/Solar-MACH" target="_blank" rel="noopener">original code</a>).</p>
-<p>This version has been <a href="https://github.com/jgieseler/Solar-MACH" target="_blank" rel="noopener">forked and modified</a> by me in order to run as a web-app using <a href="https://streamlit.io" target="_blank" rel="noopener">Streamlit</a> amd with slightly extended functionality (e.g., provide reference longitude in Stonyhurst coordinates, download bodies coordinates list).</p>
-<p>Powered by: <a href="https://matplotlib.org" target="_blank" rel="noopener"><img src="https://matplotlib.org/stable/_static/logo2_compressed.svg" height="25"></a><a href="https://streamlit.io" target="_blank" rel="noopener"><img src="https://streamlit.io/images/brand/streamlit-logo-secondary-colormark-darktext.svg" height="30"></a><a href="https://sunpy.org" target="_blank" rel="noopener"><img src="https://raw.githubusercontent.com/sunpy/sunpy-logo/master/generated/sunpy_logo_landscape.svg" height="30"></a></p>
+      <p>The <a href="https://solar-mach.github.io" target="_blank" rel="noopener"><em>Solar MAgnetic Connection Haus</em> (Solar-MACH) tool</a> is a multi-spacecraft longitudinal configuration plotter. It was originally developed at the University of Kiel, Germany, and further discussed within the <a href="https://www.cosmos.esa.int/web/esdc/archives-user-groups/heliophysics" target="_blank" rel="noopener">ESA Heliophysics Archives USer (HAUS)</a> group. It is now openly developed at GitHub.</p>
+<p>The main functionality is provided through <a href="https://github.com/jgieseler/solarmach" target="_blank" rel="noopener">a Python package</a> available at <a href="https://pypi.org/project/solarmach/" target="_blank" rel="noopener">PyPI</a> and <a href="https://anaconda.org/conda-forge/solarmach/" target="_blank" rel="noopener">conda-forge</a>. In addition, <a href="https://github.com/jgieseler/Solar-MACH" target="_blank" rel="noopener">a Streamlit version</a> is available that allows to access most functionalities as a web-app at <a href="https://solar-mach.github.io" target="_blank" rel="noopener">solar-mach.github.io</a>.</p>
+<p>If you want to cite Solar-MACH or learn more about it, please refer to the publication <a href="/publication/gieseler-2023/">Gieseler et al. (2023)</a>!</p>
+<p>Powered by: <a href="https://matplotlib.org" target="_blank" rel="noopener"><img src="https://matplotlib.org/_static/logo_dark.svg" height="15"></a><a href="https://streamlit.io" target="_blank" rel="noopener"><img src="https://streamlit.io/images/brand/streamlit-logo-secondary-colormark-darktext.svg" height="15"></a><a href="https://sunpy.org" target="_blank" rel="noopener"><img src="https://raw.githubusercontent.com/sunpy/sunpy-logo/master/generated/sunpy_logo_landscape.svg" height="15"></a><a href="https://pypi.org/project/speasy/" target="_blank" rel="noopener"><img src="https://raw.githubusercontent.com/SciQLop/speasy/main/logo/logo_speasy.svg" height="15"></a><a href="http://amda.irap.omp.eu/" target="_blank" rel="noopener"><img src="https://solar-mach.streamlit.app/~/+/app/static/amdaPrint.png" height="15"></a></p>
 
     </div>
 
