update ads link

--- a/project/spearhead/index.html
+++ b/project/spearhead/index.html
@@ -968,7 +968,7 @@
       
     
     <li>
-      <a href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Gieseler%2C%20Jan%22" target="_blank" rel="noopener">
+      <a href="https://ui.adsabs.harvard.edu/search/filter_database_fq_database=AND&amp;filter_database_fq_database=database:%22astronomy%22&amp;fq=%7b!type=aqp%20v=$fq_database%7d&amp;fq_database=%28database:%22astronomy%22%29&amp;q=author:%22Gieseler,%20Jan%22" target="_blank" rel="noopener">
         <i class="ai ai-ads"></i>
       </a>
     </li>
